hello-kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-kubernetes
  template:
    metadata:
      labels:
        app: hello-kubernetes
    spec:
      securityContext:
        runAsUser: 1000
      containers:
        - name: hello-kubernetes
          image: paulbouwer/hello-kubernetes:1.9
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /work
              name: shared-volume
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: hello-kubernetes-pvc
