hello-kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - "hello-kubernetes-petr7555.dyn.cloud.e-infra.cz"
      secretName: hello-kubernetes-petr7555-dyn-cloud-e-infra-cz-tls
  rules:
    - host: "hello-kubernetes-petr7555.dyn.cloud.e-infra.cz"
      http:
        paths:
          - backend:
              service:
                name: hello-kubernetes-svc
                port:
                  number: 80
            pathType: ImplementationSpecific
